--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this study, we will be exploring and predicting students’ exam performance about Electrical DC Machines based on their study time. The question we will try to answer with our project is: What will a student’s exam performance be based on their study time? In our project, we will be using the User Knowledge Modeling Data Set. In the chosen dataset, there are a total of 5 variables observed about students, in addition to the classified knowledge level of user (UNS): \n",
+    "In this study, we will be exploring and predicting students’ exam performance about Electrical DC Machines based on their study time. The question we will try to answer with our project is: What will a student’s exam performance be based on their study time? In our project, we will be using the User Knowledge Modeling Data Set, which has a total of 5 variables observed about students, in addition to the classified knowledge level of user (UNS): \n",
     "\n",
     "* STG: the degree of study time for goal object materials\n",
     "* SCG: the degree of repetition number of user for goal object materials \n",
@@ -138,17 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "New names:\n",
-      "* `` -> ...7\n",
-      "* `` -> ...8\n",
-      "\n",
       "New names:\n",
       "* `` -> ...7\n",
       "* `` -> ...8\n",
@@ -220,6 +216,16 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "New names:\n",
+      "* `` -> ...7\n",
+      "* `` -> ...8\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<table>\n",
@@ -285,19 +291,18 @@
     }
    ],
    "source": [
-    "# We are reading the dataset from the online data folder.\n",
-    "# The data_1 means the training data selected from the sheet 2.\n",
-    "# The data_2 means the testing data selected from the sheet 3.\n",
+    "# Reading the dataset from the online data folder.\n",
+    "# data_1 is the training data selected from sheet 2.\n",
+    "# data_2 is the testing data selected from sheet 3.\n",
     "url <- \"https://archive.ics.uci.edu/ml/machine-learning-databases/00257/Data_User_Modeling_Dataset_Hamdi%20Tolga%20KAHRAMAN.xls\"\n",
     "\n",
     "download.file(url, \"data.xls\")\n",
-    "data_1 <- read_excel(\"data.xls\", sheet = 2) \n",
-    "data_1 <- data_1%>%\n",
-    "select(STG,SCG,STR,LPR,PEG,UNS)\n",
-    "data_2 <- read_excel(\"data.xls\", sheet = 3)\n",
-    "data_2 <- data_2 %>%\n",
+    "data_1 <- read_excel(\"data.xls\", sheet = 2) %>%\n",
     "select(STG,SCG,STR,LPR,PEG,UNS)\n",
     "data_1\n",
+    "\n",
+    "data_2 <- read_excel(\"data.xls\", sheet = 3)%>%\n",
+    "select(STG,SCG,STR,LPR,PEG,UNS)\n",
     "data_2 "
    ]
   },
@@ -310,7 +315,7 @@
     "* STR: the degree of study time of user for related objects with goal object\n",
     "* LPR: the exam performance of user for related objects with goal object\n",
     "* PEG: the exam performance of user for goal objects\n",
-    "* UNS : The knowledge level of user.\n",
+    "* UNS: the knowledge level of user\n",
     "\n",
     "We can see from the above tables that the data is already tidy, since each row is a single observation, each column is a single variable, and each value is a single cell. We do not need to do any further tidying. \n",
     "\n",
@@ -326,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +367,8 @@
     }
    ],
    "source": [
-    "ggpairs(data_1)+theme_bw()"
+    "predictors <- ggpairs(data_1) + theme_bw()\n",
+    "predictors"
    ]
   },
   {
@@ -378,7 +384,7 @@
    "source": [
     "Although LPR has the highest correlation coefficient, it is too similar to PEG for the purposes of our research. It would be beneficial for us to observe the relationship between the variable with the second highest coefficient (STG) and PEG instead.\n",
     "\n",
-    "From the ggpairs that we plotted above, the correlation coeffiecient between PEG and STG is slightly higher than that of STR and SCG."
+    "From the ggpairs that we plotted above, we can see that the correlation coeffiecient between PEG and STG is slightly higher than that of STR and SCG."
    ]
   },
   {
@@ -404,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -543,13 +549,11 @@
     "# Keeping just STG and PEG from the training set.\n",
     "user_training <-data_1 %>%\n",
     "select(STG,PEG) \n",
-    "\n",
     "user_training\n",
     "\n",
     "#Keeping just STG and PEG from the testing set.\n",
     "user_testing <-data_2 %>%\n",
     "select(STG,PEG)\n",
-    "\n",
     "user_testing"
    ]
   },
@@ -801,6 +805,13 @@
    "metadata": {},
    "source": [
     "As indicated above, there is no missing data in both the STG and PEG columns in our training and testing datasets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualizing the Data"
    ]
   },
   {
