--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -46,77 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.2     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.2\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘ggplot2’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘tibble’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘tidyr’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘dplyr’ was built under R version 4.0.2”\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘tidymodels’ was built under R version 4.0.2”\n",
-      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 0.1.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mbroom    \u001b[39m 0.7.0      \u001b[32m✔\u001b[39m \u001b[34mrecipes  \u001b[39m 0.1.13\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdials    \u001b[39m 0.0.9      \u001b[32m✔\u001b[39m \u001b[34mrsample  \u001b[39m 0.0.7 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34minfer    \u001b[39m 0.5.4      \u001b[32m✔\u001b[39m \u001b[34mtune     \u001b[39m 0.1.1 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata\u001b[39m 0.0.2      \u001b[32m✔\u001b[39m \u001b[34mworkflows\u001b[39m 0.2.0 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34mparsnip  \u001b[39m 0.1.3      \u001b[32m✔\u001b[39m \u001b[34myardstick\u001b[39m 0.0.7 \n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘broom’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘dials’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘infer’ was built under R version 4.0.3”\n",
-      "Warning message:\n",
-      "“package ‘modeldata’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘parsnip’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘recipes’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘tune’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘workflows’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘yardstick’ was built under R version 4.0.2”\n",
-      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘cowplot’ was built under R version 4.0.3”\n",
-      "Registered S3 method overwritten by 'GGally':\n",
-      "  method from   \n",
-      "  +.gg   ggplot2\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#The library we need for reading and analyzing the dataset.\n",
     "library(tidyverse)\n",
@@ -138,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -367,6 +299,7 @@
     }
    ],
    "source": [
+    "#comparing distributions of each predictor variable\n",
     "predictors <- ggpairs(data_1) + theme_bw()\n",
     "predictors"
    ]
@@ -410,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +480,7 @@
     "\n",
     "\n",
     "# Keeping just STG and PEG from the training set.\n",
-    "user_training <-data_1 %>%\n",
+    "user_training <- data_1 %>%\n",
     "select(STG,PEG) \n",
     "user_training\n",
     "\n",
@@ -566,44 +499,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 1 × 2</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>STG</th><th scope=col>PEG</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>0.3711473</td><td>0.4585388</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 1 × 2\n",
-       "\\begin{tabular}{ll}\n",
-       " STG & PEG\\\\\n",
-       " <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t 0.3711473 & 0.4585388\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 1 × 2\n",
-       "\n",
-       "| STG &lt;dbl&gt; | PEG &lt;dbl&gt; |\n",
-       "|---|---|\n",
-       "| 0.3711473 | 0.4585388 |\n",
-       "\n"
-      ],
+      "text/html": [],
+      "text/latex": [],
+      "text/markdown": [],
       "text/plain": [
-       "  STG       PEG      \n",
-       "1 0.3711473 0.4585388"
+       "<0 x 0 matrix>"
       ]
      },
      "metadata": {},
@@ -688,13 +593,53 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 1 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>258</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 1 × 1\n",
+       "\\begin{tabular}{l}\n",
+       " n\\\\\n",
+       " <int>\\\\\n",
+       "\\hline\n",
+       "\t 258\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 1 × 1\n",
+       "\n",
+       "| n &lt;int&gt; |\n",
+       "|---|\n",
+       "| 258 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  n  \n",
+       "1 258"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "#finding the mean of the predictor and explanatory variables we plan to use in our analysis.\n",
-    "mean <- user_training%>%\n",
-    "map_df(mean,na.rm= TRUE)\n",
-    "mean\n",
+    "#finding the means of the predictor and explanatory variables we plan to use in our analysis.\n",
+    "means <- user_training %>%\n",
+    "map_df(mean,na.rm = TRUE)\n",
+    "means\n",
     "\n",
     "#finding the maximum of the predictor and explanatory variables we plan to use in our analysis.\n",
     "maximum <- user_training %>%\n",
@@ -704,12 +649,17 @@
     "#finding the minimum of the predictor and explanatory variables we plan to use in analysis.\n",
     "minimum <- user_training %>%\n",
     "map_df(min,na.rm =TRUE)\n",
-    "minimum"
+    "minimum\n",
+    "\n",
+    "#finding the number of observations in the predictor and explanatory variables we plan to use in analysis.\n",
+    "observations <- user_training %>%\n",
+    "summarize(n = n())\n",
+    "observations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -836,6 +786,8 @@
     }
    ],
    "source": [
+    "#refer back to the ggpairs plot for additional visualization\n",
+    "#plotting PEG against STG\n",
     "peg_stg <- user_training %>%\n",
     "    ggplot(aes(x=STG, y=PEG))+ \n",
     "    geom_point()+\n",
@@ -855,7 +807,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will be using regression to predict a student’s exam performance based on their study time. Since we are predicting a numerical value instead of a categorical value, we must use regression to evaluate and create a prediction. We will train our regression with our training data and assess its accuracy with our testing data."
+    "We will be using regression to predict a student’s exam performance(PEG) based on their study time(STG). Since we are predicting a numerical value instead of a categorical value, we must use regression to evaluate and create a prediction. We will train our regression with our training data and assess its accuracy with our testing data."
    ]
   },
   {
