--- a/DSCI100_Group32_Report.ipynb
+++ b/DSCI100_Group32_Report.ipynb
@@ -49,82 +49,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our project question is close to our student life and the final period is coming for students. We want to know what is the relationship between the study time and performance to design our review plan."
+    "Our project question is highly related to student life, especially with finals season coming quickly. Hence, we were inspired to choose study time as one of our predictors so we can analyze the relationship between our study time and exam performance in order to design an effective study plan."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.2     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.2\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘ggplot2’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘tibble’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘tidyr’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘dplyr’ was built under R version 4.0.2”\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘tidymodels’ was built under R version 4.0.2”\n",
-      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 0.1.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mbroom    \u001b[39m 0.7.0      \u001b[32m✔\u001b[39m \u001b[34mrecipes  \u001b[39m 0.1.13\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdials    \u001b[39m 0.0.9      \u001b[32m✔\u001b[39m \u001b[34mrsample  \u001b[39m 0.0.7 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34minfer    \u001b[39m 0.5.4      \u001b[32m✔\u001b[39m \u001b[34mtune     \u001b[39m 0.1.1 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata\u001b[39m 0.0.2      \u001b[32m✔\u001b[39m \u001b[34mworkflows\u001b[39m 0.2.0 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34mparsnip  \u001b[39m 0.1.3      \u001b[32m✔\u001b[39m \u001b[34myardstick\u001b[39m 0.0.7 \n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘broom’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘dials’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘infer’ was built under R version 4.0.3”\n",
-      "Warning message:\n",
-      "“package ‘modeldata’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘parsnip’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘recipes’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘tune’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘workflows’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘yardstick’ was built under R version 4.0.2”\n",
-      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘cowplot’ was built under R version 4.0.3”\n",
-      "Registered S3 method overwritten by 'GGally':\n",
-      "  method from   \n",
-      "  +.gg   ggplot2\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#The library we need for reading and analyzing the dataset.\n",
     "library(tidyverse)\n",
@@ -134,6 +66,8 @@
     "library(readxl)\n",
     "library(cowplot)\n",
     "library(GGally)\n",
+    "library(broom)\n",
+    "library(ISLR)\n",
     "options(repr.matrix.max.rows = 6)"
    ]
   },
@@ -141,12 +75,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Reading the Data"
+    "#### Reading the Data\n",
+    "\n",
+    "Reading the dataset from the online data folder.\n",
+    "\n",
+    "In the original dataset, sheet 2 was already labelled as training data, and sheet 3 was labelled as testing data. After examining the proportions of data in each sheet, we came to the conclusion that they were in fact labelled correctly due to the higher proportion of data in the sheet 2 and a lower proportion of data in sheet 3.\n",
+    "Therefore, we didn't need to split the data ourselves and we don't need to split the data ourselves.\n",
+    "\n",
+    "data_1 is the training data selected from sheet 2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,93 +163,30 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "New names:\n",
-      "* `` -> ...7\n",
-      "* `` -> ...8\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 145 × 6</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>STG</th><th scope=col>SCG</th><th scope=col>STR</th><th scope=col>LPR</th><th scope=col>PEG</th><th scope=col>UNS</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>0.00</td><td>0.10</td><td>0.50</td><td>0.26</td><td>0.05</td><td>Very Low</td></tr>\n",
-       "\t<tr><td>0.05</td><td>0.05</td><td>0.55</td><td>0.60</td><td>0.14</td><td>Low     </td></tr>\n",
-       "\t<tr><td>0.08</td><td>0.18</td><td>0.63</td><td>0.60</td><td>0.85</td><td>High    </td></tr>\n",
-       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
-       "\t<tr><td>0.56</td><td>0.60</td><td>0.77</td><td>0.13</td><td>0.32</td><td>Low   </td></tr>\n",
-       "\t<tr><td>0.66</td><td>0.68</td><td>0.81</td><td>0.57</td><td>0.57</td><td>Middle</td></tr>\n",
-       "\t<tr><td>0.68</td><td>0.64</td><td>0.79</td><td>0.97</td><td>0.24</td><td>Middle</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 145 × 6\n",
-       "\\begin{tabular}{llllll}\n",
-       " STG & SCG & STR & LPR & PEG & UNS\\\\\n",
-       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr>\\\\\n",
-       "\\hline\n",
-       "\t 0.00 & 0.10 & 0.50 & 0.26 & 0.05 & Very Low\\\\\n",
-       "\t 0.05 & 0.05 & 0.55 & 0.60 & 0.14 & Low     \\\\\n",
-       "\t 0.08 & 0.18 & 0.63 & 0.60 & 0.85 & High    \\\\\n",
-       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
-       "\t 0.56 & 0.60 & 0.77 & 0.13 & 0.32 & Low   \\\\\n",
-       "\t 0.66 & 0.68 & 0.81 & 0.57 & 0.57 & Middle\\\\\n",
-       "\t 0.68 & 0.64 & 0.79 & 0.97 & 0.24 & Middle\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 145 × 6\n",
-       "\n",
-       "| STG &lt;dbl&gt; | SCG &lt;dbl&gt; | STR &lt;dbl&gt; | LPR &lt;dbl&gt; | PEG &lt;dbl&gt; | UNS &lt;chr&gt; |\n",
-       "|---|---|---|---|---|---|\n",
-       "| 0.00 | 0.10 | 0.50 | 0.26 | 0.05 | Very Low |\n",
-       "| 0.05 | 0.05 | 0.55 | 0.60 | 0.14 | Low      |\n",
-       "| 0.08 | 0.18 | 0.63 | 0.60 | 0.85 | High     |\n",
-       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
-       "| 0.56 | 0.60 | 0.77 | 0.13 | 0.32 | Low    |\n",
-       "| 0.66 | 0.68 | 0.81 | 0.57 | 0.57 | Middle |\n",
-       "| 0.68 | 0.64 | 0.79 | 0.97 | 0.24 | Middle |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "    STG  SCG  STR  LPR  PEG  UNS     \n",
-       "1   0.00 0.10 0.50 0.26 0.05 Very Low\n",
-       "2   0.05 0.05 0.55 0.60 0.14 Low     \n",
-       "3   0.08 0.18 0.63 0.60 0.85 High    \n",
-       "⋮   ⋮    ⋮    ⋮    ⋮    ⋮    ⋮       \n",
-       "143 0.56 0.60 0.77 0.13 0.32 Low     \n",
-       "144 0.66 0.68 0.81 0.57 0.57 Middle  \n",
-       "145 0.68 0.64 0.79 0.97 0.24 Middle  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "# Reading the dataset from the online data folder.\n",
-    "# data_1 is the training data selected from sheet 2.\n",
-    "# data_2 is the testing data selected from sheet 3.\n",
     "url <- \"https://archive.ics.uci.edu/ml/machine-learning-databases/00257/Data_User_Modeling_Dataset_Hamdi%20Tolga%20KAHRAMAN.xls\"\n",
     "\n",
     "download.file(url, \"data.xls\")\n",
     "data_1 <- read_excel(\"data.xls\", sheet = 2) %>%\n",
     "select(STG,SCG,STR,LPR,PEG,UNS)\n",
-    "data_1\n",
-    "\n",
+    "data_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "data_2 is the testing data selected from sheet 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data_2 <- read_excel(\"data.xls\", sheet = 3)%>%\n",
     "select(STG,SCG,STR,LPR,PEG,UNS)\n",
     "data_2 "
