First Correction Again

--- a/DSCI100_Group32_Report.ipynb
+++ b/DSCI100_Group32_Report.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DSCI100 Group 32 Project Proposal"
+    "# DSCI100 Group 32 Project Final Report"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction:"
+    "## 1.Introduction:"
    ]
   },
   {
@@ -53,12 +53,87 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#The library we need for reading and analyzing the dataset.\n",
+    "#### 1.1 Loading the libraries that we need for the data analysis\n",
+    "The library we need for reading and analyzing the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.2     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.2\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘ggplot2’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘tibble’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘tidyr’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘dplyr’ was built under R version 4.0.2”\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘tidymodels’ was built under R version 4.0.2”\n",
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 0.1.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom    \u001b[39m 0.7.0      \u001b[32m✔\u001b[39m \u001b[34mrecipes  \u001b[39m 0.1.13\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdials    \u001b[39m 0.0.9      \u001b[32m✔\u001b[39m \u001b[34mrsample  \u001b[39m 0.0.7 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34minfer    \u001b[39m 0.5.4      \u001b[32m✔\u001b[39m \u001b[34mtune     \u001b[39m 0.1.1 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata\u001b[39m 0.0.2      \u001b[32m✔\u001b[39m \u001b[34mworkflows\u001b[39m 0.2.0 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mparsnip  \u001b[39m 0.1.3      \u001b[32m✔\u001b[39m \u001b[34myardstick\u001b[39m 0.0.7 \n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘broom’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘dials’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘infer’ was built under R version 4.0.3”\n",
+      "Warning message:\n",
+      "“package ‘modeldata’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘parsnip’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘recipes’ was built under R version 4.0.1”\n",
+      "Warning message:\n",
+      "“package ‘tune’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘workflows’ was built under R version 4.0.2”\n",
+      "Warning message:\n",
+      "“package ‘yardstick’ was built under R version 4.0.2”\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘cowplot’ was built under R version 4.0.3”\n",
+      "Registered S3 method overwritten by 'GGally':\n",
+      "  method from   \n",
+      "  +.gg   ggplot2\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "library(tidyverse)\n",
     "library(digest)\n",
     "library(repr)\n",
@@ -75,7 +150,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Reading the Data\n",
+    "#### 1.2 Setting the Seed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the work to be reproducible, we will set a seed before we do the analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set.seed(123)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.3 Reading the Data\n",
     "\n",
     "Reading the dataset from the online data folder.\n",
     "\n",
@@ -183,9 +281,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "New names:\n",
+      "* `` -> ...7\n",
+      "* `` -> ...8\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 145 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>STG</th><th scope=col>SCG</th><th scope=col>STR</th><th scope=col>LPR</th><th scope=col>PEG</th><th scope=col>UNS</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0.00</td><td>0.10</td><td>0.50</td><td>0.26</td><td>0.05</td><td>Very Low</td></tr>\n",
+       "\t<tr><td>0.05</td><td>0.05</td><td>0.55</td><td>0.60</td><td>0.14</td><td>Low     </td></tr>\n",
+       "\t<tr><td>0.08</td><td>0.18</td><td>0.63</td><td>0.60</td><td>0.85</td><td>High    </td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>0.56</td><td>0.60</td><td>0.77</td><td>0.13</td><td>0.32</td><td>Low   </td></tr>\n",
+       "\t<tr><td>0.66</td><td>0.68</td><td>0.81</td><td>0.57</td><td>0.57</td><td>Middle</td></tr>\n",
+       "\t<tr><td>0.68</td><td>0.64</td><td>0.79</td><td>0.97</td><td>0.24</td><td>Middle</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 145 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " STG & SCG & STR & LPR & PEG & UNS\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t 0.00 & 0.10 & 0.50 & 0.26 & 0.05 & Very Low\\\\\n",
+       "\t 0.05 & 0.05 & 0.55 & 0.60 & 0.14 & Low     \\\\\n",
+       "\t 0.08 & 0.18 & 0.63 & 0.60 & 0.85 & High    \\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 0.56 & 0.60 & 0.77 & 0.13 & 0.32 & Low   \\\\\n",
+       "\t 0.66 & 0.68 & 0.81 & 0.57 & 0.57 & Middle\\\\\n",
+       "\t 0.68 & 0.64 & 0.79 & 0.97 & 0.24 & Middle\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 145 × 6\n",
+       "\n",
+       "| STG &lt;dbl&gt; | SCG &lt;dbl&gt; | STR &lt;dbl&gt; | LPR &lt;dbl&gt; | PEG &lt;dbl&gt; | UNS &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| 0.00 | 0.10 | 0.50 | 0.26 | 0.05 | Very Low |\n",
+       "| 0.05 | 0.05 | 0.55 | 0.60 | 0.14 | Low      |\n",
+       "| 0.08 | 0.18 | 0.63 | 0.60 | 0.85 | High     |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| 0.56 | 0.60 | 0.77 | 0.13 | 0.32 | Low    |\n",
+       "| 0.66 | 0.68 | 0.81 | 0.57 | 0.57 | Middle |\n",
+       "| 0.68 | 0.64 | 0.79 | 0.97 | 0.24 | Middle |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "    STG  SCG  STR  LPR  PEG  UNS     \n",
+       "1   0.00 0.10 0.50 0.26 0.05 Very Low\n",
+       "2   0.05 0.05 0.55 0.60 0.14 Low     \n",
+       "3   0.08 0.18 0.63 0.60 0.85 High    \n",
+       "⋮   ⋮    ⋮    ⋮    ⋮    ⋮    ⋮       \n",
+       "143 0.56 0.60 0.77 0.13 0.32 Low     \n",
+       "144 0.66 0.68 0.81 0.57 0.57 Middle  \n",
+       "145 0.68 0.64 0.79 0.97 0.24 Middle  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "data_2 <- read_excel(\"data.xls\", sheet = 3)%>%\n",
     "select(STG,SCG,STR,LPR,PEG,UNS)\n",
@@ -212,12 +385,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Determing the Predictor(s) and the Explanatory Variable(s)."
+    "#### 1.4 Determing the Predictor(s) and the Explanatory Variable(s).\n",
+    "comparing distributions of each predictor variable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -253,9 +427,15 @@
     }
    ],
    "source": [
-    "#comparing distributions of each predictor variable\n",
     "predictors <- ggpairs(data_1) + theme_bw()\n",
     "predictors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "       Figure1.4.1 ggpairs plot among the six variables"
    ]
   },
   {
@@ -292,12 +472,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cleaning and Wrangling the Data"
+    "#### 1.5 Cleaning and Wrangling the Data\n",
+    "Wrangling the data and removing irrelevant columns. $\\newline$\n",
+    "Keeping just STG and PEG from the training set. $\\newline$\n",
+    "Because STG and PEG are variables that we are interested in."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +546,26 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "user_training <- data_1 %>%\n",
+    "select(STG,PEG) \n",
+    "user_training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Keeping just STG and PEG from the testing set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -430,15 +632,6 @@
     }
    ],
    "source": [
-    "# Wrangling the data and removing irrelevant columns\n",
-    "\n",
-    "\n",
-    "# Keeping just STG and PEG from the training set.\n",
-    "user_training <- data_1 %>%\n",
-    "select(STG,PEG) \n",
-    "user_training\n",
-    "\n",
-    "#Keeping just STG and PEG from the testing set.\n",
     "user_testing <-data_2 %>%\n",
     "select(STG,PEG)\n",
     "user_testing"
@@ -448,12 +641,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Summarizing the Data"
+    "#### 1.7 Summarizing the Data\n",
+    "Finding the means of the predictor and explanatory variables we plan to use in our analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -498,10 +692,24 @@
     }
    ],
    "source": [
-    "#finding the means of the predictor and explanatory variables we plan to use in our analysis.\n",
     "user_means <- user_training %>%\n",
     "map_df(mean, na.rm =TRUE)\n",
     "user_means"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have observed that the mean of STG is 0.37 and PEG is 0.46.\n",
+    "This gives us the an big picture and overall idea of the training dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finding the maximum of the predictor and explanatory variables we plan to use in our analysis."
    ]
   },
   {
@@ -551,15 +759,21 @@
     }
    ],
    "source": [
-    "#finding the maximum of the predictor and explanatory variables we plan to use in our analysis.\n",
     "maximum <- user_training %>%\n",
     "map_df(max,na.rm =TRUE)\n",
     "maximum"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finding the minimum of the predictor and explanatory variables we plan to use in analysis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -604,15 +818,28 @@
     }
    ],
    "source": [
-    "#finding the minimum of the predictor and explanatory variables we plan to use in analysis.\n",
     "minimum <- user_training %>%\n",
     "map_df(min,na.rm =TRUE)\n",
     "minimum"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Both maximum and minimum values give us a range of variables (STG and PEG)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finding the number of observations in the predictor and explanatory variables we plan to use in analysis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -657,15 +884,21 @@
     }
    ],
    "source": [
-    "#finding the number of observations in the predictor and explanatory variables we plan to use in analysis.\n",
     "observations <- user_training %>%\n",
     "summarize(n = n())\n",
     "observations"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finding how many rows have missing data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +975,6 @@
     }
    ],
    "source": [
-    "#finding how many rows have missing data\n",
     "NA_STG_train<-sum(is.na(user_training$STG))\n",
     "NA_STG_train\n",
     "\n",
@@ -767,12 +999,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualizing the Data"
+    "#### 1.8 Visualizing the Data\n",
+    "\n",
+    "Refer back to the ggpairs plot for additional visualization. $\\newline$\n",
+    "Plotting PEG against STG."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -792,14 +1027,19 @@
     }
    ],
    "source": [
-    "#refer back to the ggpairs plot for additional visualization\n",
-    "#plotting PEG against STG\n",
     "peg_stg <- user_training %>%\n",
     "    ggplot(aes(x=STG, y=PEG))+ \n",
     "    geom_point()+\n",
     "    labs(y = \"Exam performance of user for goal objects (PEG)\" , x = \"Degree of study time for goal object materials (STG)\", title = \"PEG vs. STG\")+\n",
     "    theme(text=element_text(size=15))\n",
     "peg_stg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Figure1.8.1 The plot of the relationship between PEG and STG"
    ]
   },
   {
