--- a/DSCI100_Group32_Report.ipynb
+++ b/DSCI100_Group32_Report.ipynb
@@ -1046,7 +1046,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Methods"
+    "### 2.Methods"
    ]
   },
   {
@@ -1074,7 +1074,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Expected Outcomes and Significance"
+    "### 3.Expected Outcomes and Significance"
    ]
   },
   {
